Add initial game scene implementation and assets

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -31,5 +31,8 @@
 
     // ====== Playdate Debug Settings ======
     // Output directory for the compiled game bundle
-    "playdate-debug.outputPath": "builds"
+    "playdate-debug.outputPath": "builds",
+    "Lua.diagnostics.disable": [
+        "undefined-global"
+    ]
 }
